<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">约跑吧Running</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bt_start">开始</string>
    <string name="bt_stop">暂停</string>
    <string name="bt_submit">提交</string>
    <string name="desire_distance">目标距离</string>
    <string name="distance">1000m</string>
    <string name="burning_calories">燃烧脂肪</string>
    <string name="calories">0.00g</string>
    <string name="main_title">计步器</string>
    <string name="started">开始了</string>
    <string name="stopped">暂停了</string>
    <string name="notification_subtitle">正在计步...</string>
    <string name="press_again_exit">再按一次退出应用</string>
    <string name="hint_username">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="savePassword">记住密码</string>
    <string name="account_cannot_null">手机号不能为空</string>
    <string name="password_cannot_null">密码不能为空</string>
    <string name="password_encode_failed">登录失败</string>
    <string name="register_phonenumber">手机号：</string>
    <string name="register_please_input_phonenumber">请输入您的手机号码</string>
    <string name="register_getvalidatenum">获取验证码</string>
    <string name="register_validatenum">验证码:</string>
    <string name="register_next">下一步</string>
    <string name="phoneNumber_not_null">手机号码不能为空</string>
    <string name="validateNumber_not_null">验证码不能为空</string>
    <string name="is_validating">正在验证...</string>
    <string name="please_input_password">请输入密码：</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="validate_code">验证码</string>
    <string name="password_regex">密码设置规则：密码必须为8~16位字符和数字混合而成!</string>
    <string name="loading">Loading</string>
    <string name="news_detail">新闻详情</string>

</resources>