<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/login_border"
            android:drawableLeft="@drawable/ic_login_user"
            android:hint="@string/hint_username"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="@color/bt_textColor"
            android:textSize="17sp" >
        </EditText>

        <View
            android:id="@+id/login_divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/et_username" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/login_divider"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/login_border"
            android:drawableLeft="@drawable/ic_login_password"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColor="@color/bt_textColor"
            android:textSize="17sp" >
        </EditText>

        <CheckBox
            android:id="@+id/cb_savePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/et_password"
            android:layout_below="@id/et_password"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:text="@string/savePassword"
            android:textColor="@color/bt_textColor" />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@id/et_password"
            android:layout_alignRight="@id/et_password"
            android:layout_below="@id/cb_savePassword"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_start_selector"
            android:text="@string/login"
            android:textColor="@color/bt_textColor" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignLeft="@id/et_password"
            android:layout_alignRight="@id/et_password"
            android:layout_below="@id/bt_login"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_start_selector"
            android:text="@string/register"
            android:textColor="@color/bt_textColor" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77aaaaaa"
        android:visibility="gone" >

        <include
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            layout="@layout/layout_loading" >
        </include>
    </RelativeLayout>

</RelativeLayout>