<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_set_username"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="请输入昵称"
                android:textColor="@color/bt_textColor"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignLeft="@id/tv_set_username"
                android:layout_below="@id/tv_set_username"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_border"
                android:drawableLeft="@drawable/ic_login_user"
                android:hint="请输入昵称"
                android:maxLength="10"
                android:singleLine="true"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_set_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/register_username"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/please_input_password"
                android:textColor="@color/bt_textColor"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignLeft="@id/tv_set_password"
                android:layout_below="@id/tv_set_password"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_border"
                android:drawableLeft="@drawable/ic_login_password"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/register_password"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/confirm_password"
                android:textColor="@color/bt_textColor"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignLeft="@id/tv_set_password"
                android:layout_below="@id/tv_confirm_password"
                android:layout_marginRight="7dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/login_border"
                android:drawableLeft="@drawable/ic_login_password"
                android:hint="@string/please_input_password_again"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textSize="17sp" />

            <Button
                android:id="@+id/bt_register_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/confirm_password"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="7dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_start_selector"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/bt_textColor"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignLeft="@id/bt_register_password"
                android:layout_alignRight="@id/bt_register_password"
                android:layout_below="@id/bt_register_password"
                android:layout_marginTop="20dp"
                android:text="@string/password_regex"
                android:textColor="@color/bt_textColor"
                android:textSize="16sp" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_register_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77aaaaaa"
        android:visibility="gone" >

        <include
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            layout="@layout/layout_loading" />
    </RelativeLayout>

</FrameLayout>